alteração botão voltar alteração na tela perfil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="pesquisar">pesquisar</string>
     <string name="perfil">Perfil</string>
     <string name="registrarButton">Registre-se com o email</string>
+    <string name="button_alterar_senha">ALTERAR SENHA</string>
 </resources>
