Criando tela de bate-papo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="perfil">Perfil</string>
     <string name="registrarButton">Registre-se com o email</string>
     <string name="button_alterar_senha">ALTERAR SENHA</string>
+    <string name="title_activity_chat">Chat</string>
 </resources>
