Implementando funcionalidade de Redefinição de Senha na tela de Login e criando tela de Conversas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="deslogar">Sair</string>
     <string name="pesquisar">pesquisar</string>
     <string name="perfil">Perfil</string>
+    <string name="esqueceuSenha">Esqueceu a senha?</string>
     <string name="registrarButton">Registre-se com o email</string>
     <string name="button_alterar_senha">ALTERAR SENHA</string>
     <string name="title_activity_chat">Chat</string>
