tela adicionar jogo v2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="registrarButton">Registre-se com o email</string>
     <string name="button_alterar_senha">ALTERAR SENHA</string>
     <string name="title_activity_chat">Chat</string>
+    <string name="addGameButton">CONFIRMAR</string>
 </resources>
