Criando e configurando arquivos necessários para o módulo de bate-papo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="cadSenha">Senha</string>
     <string name="cadConfirmarSenha">Confirmar Senha</string>
     <string name="deslogar">Sair</string>
-    <string name="pesquisar">pesquisar</string>
+    <string name="pesquisar">Pesquisar</string>
     <string name="perfil">Perfil</string>
     <string name="esqueceuSenha">Esqueceu a senha?</string>
     <string name="registrarButton">Registre-se com o email</string>
