Criando e configurando primeira versão do módulo MAPA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_chat">Chat</string>
     <string name="addGameButton">CONFIRMAR</string>
     <string name="deleteButton">REMOVER</string>
+    <string name="title_activity_mapa">Mapa</string>
 </resources>
